--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,12 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.5",
         "doctrine/dbal": "^2.6",
+        "driftingly/rector-laravel": "^0.24.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "rector/rector": "^0.18.0"
     },
     "repositories": [
         { "type": "git", "url": "https://github.com/bravecollective/web-ui.git" }
