--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
         "ext-json": "*",
         "ext-pdo_mysql": "*",
         "bravecollective/web-ui": "*@dev",
-        "eveseat/eseye": "^1.1.0",
+        "eveseat/eseye": "^2.0.0",
         "fideloper/proxy": "^4.0",
         "frontpack/composer-assets-plugin": "^0.11.0",
         "ixudra/curl": "^6.13",
         "jdavidbakr/replaceable-model": "^1.0",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^7.0",
         "laravel/helpers": "^1.6",
         "laravel/socialite": "^5.0",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.5",
@@ -26,7 +26,7 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.5",
+        "phpunit/phpunit": "^8.5",
         "rector/rector": "^0.18.0"
     },
     "repositories": [
