--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "bravecollective/web-ui": "*@dev",
         "eveseat/eseye": "^3.0.0",
         "frontpack/composer-assets-plugin": "^0.11.0",
+        "guzzlehttp/guzzle": "^7.7",
         "ixudra/curl": "^6.13",
         "laravel/framework": "^10.0",
         "laravel/helpers": "^1.6",
