--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ _ide_helper.php
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Local development overrides.
+docker-compose.override.yml
