--- a/config/dockerfile-php
+++ b/config/dockerfile-php
@@ -1,9 +1,9 @@
 FROM php:8.2-fpm-alpine
 
 RUN apk update
-RUN apk add --no-cache git
+RUN apk add --no-cache git gmp-dev
 
-RUN docker-php-ext-install pdo_mysql
+RUN docker-php-ext-install pdo_mysql gmp
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 RUN mkdir -p /home/www-data/.composer && chmod 0777 /home/www-data/.composer
