--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^10.0",
         "laravel/helpers": "^1.6",
         "laravel/socialite": "^5.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^4.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.5",
@@ -67,7 +68,7 @@
         "sort-packages": true,
         "optimize-autoloader": true,
         "platform": {
-            
+            "php": "8.1.0"
         },
         "allow-plugins": {
             "kylekatarnls/update-helper": true,
