add composer.json to build artifacts to allow artisan xx:cache

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ build_job:
         LICENSE
         README.md
         artisan
+        composer.json
     - echo "BUILD_JOB_ID=$CI_JOB_ID" > build.env
   artifacts:
     name: 'moon-mining-manager-$CI_COMMIT_TAG'
